Changed all patterns with images to tie back to wordpress media library for image source.

--- a/patterns/vsb-counter-1.html
+++ b/patterns/vsb-counter-1.html
@@ -8,12 +8,8 @@
 <!-- wp:column {"width":"25%"} -->
 <div class="wp-block-column" style="flex-basis:25%"><!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"constrained"}} -->
 <div class="wp-block-group" style="margin-top:0;margin-bottom:0"><!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"right":"0","left":"0","top":"0","bottom":"0"},"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
-<div class="wp-block-group" style="margin-top:0;margin-bottom:0;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0"><!-- wp:cozy-block/counter {"blockClientId":"fd5f31b4-165c-4a81-95c1-17686384d734","endNumber":"70","styles":{"fontFamily":"Public Sans","fontSize":44,"color":"#1D4ED8","fontWeight":700}} -->
-<div class="cozy-block-counter" id="cozyBlock_fd5f31b4_165c_4a81_95c1_17686384d734"><span>0</span></div>
-<!-- /wp:cozy-block/counter -->
-
-<!-- wp:heading {"style":{"elements":{"link":{"color":{"text":"var:preset|color|primary"}}},"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"}}},"textColor":"primary"} -->
-<h2 class="wp-block-heading has-primary-color has-text-color has-link-color" style="padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">k+</h2>
+<div class="wp-block-group" style="margin-top:0;margin-bottom:0;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0"><!-- wp:heading {"style":{"elements":{"link":{"color":{"text":"var:preset|color|primary"}}},"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"}}},"textColor":"primary"} -->
+<h2 class="wp-block-heading has-primary-color has-text-color has-link-color" style="padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">70k+</h2>
 <!-- /wp:heading --></div>
 <!-- /wp:group -->
 
@@ -26,12 +22,8 @@
 <!-- wp:column {"width":"25%"} -->
 <div class="wp-block-column" style="flex-basis:25%"><!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"constrained"}} -->
 <div class="wp-block-group" style="margin-top:0;margin-bottom:0"><!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"right":"0","left":"0","top":"0","bottom":"0"},"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
-<div class="wp-block-group" style="margin-top:0;margin-bottom:0;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0"><!-- wp:cozy-block/counter {"blockClientId":"ee11b995-2dfa-404e-8ede-a9c9cb5b3b2c","endNumber":"78","styles":{"fontFamily":"Public Sans","fontSize":44,"color":"#1D4ED8","fontWeight":700}} -->
-<div class="cozy-block-counter" id="cozyBlock_ee11b995_2dfa_404e_8ede_a9c9cb5b3b2c"><span>0</span></div>
-<!-- /wp:cozy-block/counter -->
-
-<!-- wp:heading {"style":{"elements":{"link":{"color":{"text":"var:preset|color|primary"}}},"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"}}},"textColor":"primary"} -->
-<h2 class="wp-block-heading has-primary-color has-text-color has-link-color" style="padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">%</h2>
+<div class="wp-block-group" style="margin-top:0;margin-bottom:0;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0"><!-- wp:heading {"style":{"elements":{"link":{"color":{"text":"var:preset|color|primary"}}},"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"}}},"textColor":"primary"} -->
+<h2 class="wp-block-heading has-primary-color has-text-color has-link-color" style="padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">78%</h2>
 <!-- /wp:heading --></div>
 <!-- /wp:group -->
 
