--- a/patterns/vsb-counter-3-column.html
+++ b/patterns/vsb-counter-3-column.html
@@ -1,12 +1,8 @@
 <!-- wp:columns {"metadata":{"categories":[],"patternName":"core/block/241","name":"VSB Counter (3-Column)"},"className":"is-style-default","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"blockGap":{"top":"0","left":"0"},"padding":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50","left":"0","right":"0"}},"border":{"radius":"10px"}},"backgroundColor":"white","cozyHoverEffect":{"hasOverflow":false,"overflow":"hidden","hasZIndex":false,"zIndex":0,"boxShadow":{"enabled":true,"color":"#000","horizontal":0,"vertical":0,"blur":10,"spread":0,"position":""},"boxShadowHover":{"enabled":false,"color":"#000","horizontal":0,"vertical":0,"blur":10,"spread":0,"position":""},"transformEnabled":false,"transform":{"translateX":0,"translateY":0,"rotate":0,"scale":1},"transformDefaultEnabled":false,"transformDefault":{"translateX":0,"translateY":0,"rotate":0,"scale":1}}} -->
 <div class="is-style-default wp-block-columns has-white-background-color has-background" style="border-radius:10px;margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--50);padding-right:0;padding-bottom:var(--wp--preset--spacing--50);padding-left:0"><!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|20"},"border":{"right":{"color":"#e4ddec","width":"1px"}}}} -->
 <div class="wp-block-column" style="border-right-color:#e4ddec;border-right-width:1px"><!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"center"}} -->
-<div class="wp-block-group"><!-- wp:cozy-block/counter {"blockClientId":"973a21cc-9e44-460e-8960-10f56f5845c5","endNumber":"750","styles":{"fontFamily":"Public Sans","fontSize":44,"color":"#1D4ED8","fontWeight":700}} -->
-<div class="cozy-block-counter" id="cozyBlock_973a21cc_9e44_460e_8960_10f56f5845c5"><span>0</span></div>
-<!-- /wp:cozy-block/counter -->
-
-<!-- wp:heading {"textAlign":"center","style":{"elements":{"link":{"color":{"text":"var:preset|color|primary"}}}},"textColor":"primary"} -->
-<h2 class="wp-block-heading has-text-align-center has-primary-color has-text-color has-link-color">+</h2>
+<div class="wp-block-group"><!-- wp:heading {"textAlign":"center","style":{"elements":{"link":{"color":{"text":"var:preset|color|primary"}}}},"textColor":"primary"} -->
+<h2 class="wp-block-heading has-text-align-center has-primary-color has-text-color has-link-color">750+</h2>
 <!-- /wp:heading --></div>
 <!-- /wp:group -->
 
@@ -17,12 +13,8 @@
 
 <!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|20"},"border":{"right":{"color":"#e4ddec","width":"1px"}}}} -->
 <div class="wp-block-column" style="border-right-color:#e4ddec;border-right-width:1px"><!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"center"}} -->
-<div class="wp-block-group"><!-- wp:cozy-block/counter {"blockClientId":"bdb3bd70-3a79-46ef-ab24-d9d982c458e2","endNumber":"13","styles":{"fontFamily":"Public Sans","fontSize":44,"color":"#1D4ED8","fontWeight":700}} -->
-<div class="cozy-block-counter" id="cozyBlock_bdb3bd70_3a79_46ef_ab24_d9d982c458e2"><span>0</span></div>
-<!-- /wp:cozy-block/counter -->
-
-<!-- wp:heading {"textAlign":"center","style":{"typography":{"fontStyle":"normal","fontWeight":"600"},"elements":{"link":{"color":{"text":"var:preset|color|primary"}}}},"textColor":"primary"} -->
-<h2 class="wp-block-heading has-text-align-center has-primary-color has-text-color has-link-color" style="font-style:normal;font-weight:600">+</h2>
+<div class="wp-block-group"><!-- wp:heading {"textAlign":"center","style":{"typography":{"fontStyle":"normal","fontWeight":"600"},"elements":{"link":{"color":{"text":"var:preset|color|primary"}}}},"textColor":"primary"} -->
+<h2 class="wp-block-heading has-text-align-center has-primary-color has-text-color has-link-color" style="font-style:normal;font-weight:600">13+</h2>
 <!-- /wp:heading --></div>
 <!-- /wp:group -->
 
@@ -33,12 +25,8 @@
 
 <!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|20"},"border":{"right":{"color":"#e4ddec","width":"1px"}}}} -->
 <div class="wp-block-column" style="border-right-color:#e4ddec;border-right-width:1px"><!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"center"}} -->
-<div class="wp-block-group"><!-- wp:cozy-block/counter {"blockClientId":"726efdec-1225-4609-9576-24310e09d5fa","endNumber":"300","styles":{"fontFamily":"Public Sans","fontSize":44,"color":"#1D4ED8","fontWeight":700}} -->
-<div class="cozy-block-counter" id="cozyBlock_726efdec_1225_4609_9576_24310e09d5fa"><span>0</span></div>
-<!-- /wp:cozy-block/counter -->
-
-<!-- wp:heading {"textAlign":"center","style":{"typography":{"fontStyle":"normal","fontWeight":"600"},"elements":{"link":{"color":{"text":"var:preset|color|primary"}}}},"textColor":"primary"} -->
-<h2 class="wp-block-heading has-text-align-center has-primary-color has-text-color has-link-color" style="font-style:normal;font-weight:600">+</h2>
+<div class="wp-block-group"><!-- wp:heading {"textAlign":"center","style":{"typography":{"fontStyle":"normal","fontWeight":"600"},"elements":{"link":{"color":{"text":"var:preset|color|primary"}}}},"textColor":"primary"} -->
+<h2 class="wp-block-heading has-text-align-center has-primary-color has-text-color has-link-color" style="font-style:normal;font-weight:600">300+</h2>
 <!-- /wp:heading --></div>
 <!-- /wp:group -->
 
